syntax = "proto3";

package envoy.extensions.access_loggers.stdout.v4alpha;

import "envoy/config/core/v4alpha/substitution_format_string.proto";

import "google/protobuf/struct.proto";

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.access_loggers.stdout.v4alpha";
option java_outer_classname = "StdoutProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = NEXT_MAJOR_VERSION_CANDIDATE;

// [#protodoc-title: Standard Output access log]
// [#extension: envoy.access_loggers.stdout]

// Custom configuration for an :ref:`AccessLog <envoy_api_msg_config.accesslog.v4alpha.AccessLog>`
// that writes log entries directly to a standard output.
message StdoutAccessLog {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.extensions.access_loggers.stdout.v3.StdoutAccessLog";

  oneof access_log_format {
    // Configuration to form access log data and format.
    // If not specified, use :ref:`default format <config_access_log_default_format>`.
    config.core.v4alpha.SubstitutionFormatString log_format = 1
        [(validate.rules).message = {required: true}];
  }
}
